<resources>
    <string name="acceder">Acceder</string>
    <string name="app_name">SAEC</string>
    <string name="contraseña">Contraseña</string>
    <string name="horario_general">Horario General</string>
    <string name="horario_alumno">Horario por matricula de alumno</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="inicio_de_sesion">Acceder a SAEC</string>
    <string name="listado_campus">Listado por campus</string>
    <string name="listado_general">Listado General</string>
    <string name="menu_adeudo">Adeudos</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_listados">Listados</string>
    <string name="menu_registro">Horarios</string>
    <string name="menu_salir">Salir</string>
    <string name="salir">Salir</string>
    <string name="seleccion">Seleccione la opción</string>
    <string name="seleccion_matricula">Seleccione la matricula a revisar</string>
    <string name="title_activity_registroalumnos">Horario por matricula</string>
    <string name="title_activity_registrogeneral">Entradas y Salidas</string>
    <string name="title_activity_seleccionalumno">Selección de matricula</string>
    <string name="title_activity_listadocampus">Alumnos por plantel</string>
    <string name="title_activity_listadogeneral">Listado general de alumnos</string>
    <string name="title_activity_seleccioncampus">Selección de campus</string>
    <string name="title_activity_adeudos">Listado de alumnos con adeudo </string>
    <string name="title_activity_horarios">Menú de entradas y salidas</string>
    <string name="title_activity_listados">Menú de listados</string>
    <string name="title_activity_principal">Bienvenido a SAEC móvil</string>
    <string name="detalle">
<![CDATA[
    Bienvenido a su aplicación.<br><br>
    <b>SAEC MÓVIL</b> le permite monitorear la matriculación y el status de sus alumnos<br><br>
    Viaje a por la información de su instituto través del menú inferior.
]]>
</string>
</resources>
