<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_inferior_inicio"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_inicio" />

    <item
        android:id="@+id/menu_inferior_listados"
        android:icon="@drawable/listados"
        android:title="@string/menu_listados" />

    <item
        android:id="@+id/menu_inferior_adeudos"
        android:icon="@drawable/adeudos"
        android:title="@string/menu_adeudo" />

    <item
        android:id="@+id/menu_inferior_registro"
        android:icon="@drawable/horario"
        android:title="@string/menu_registro" />

    <item
        android:id="@+id/menu_inferior_salir"
        android:icon="@drawable/salir"
        android:title="@string/menu_salir" />

</menu>
